--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
     displayName: Deploy
     pool:
       vmImage: $(vmImageName)
-    environment: 'Raghupatikdotnetdemo-1071.walmartdev'
+    environment: 'Project.Batch33'
     strategy:
       runOnce:
         deploy:
